# telegramresender2

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  client.py  docker-compose.yml  pyproject.toml
.gitea/workflows/: latest.yaml
commands/: __init__.py  channels.py  delete.py  groups.py  posts.py  start.py  update.py  user.py  view.py
config/: environment.py  log.py
database/: __init__.py  schemas.py
utils/: functions.py
